Added marker on click and input form

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
               placeholder="min"
             />
           </div>
+
+          <!-- Only one is visible -->
           <div class="form__row">
             <label class="form__label">Cadence</label>
             <input
